Added a lot. Added a working team scraper, some decent predictors, and a lot of small changes.
Signed-off-by: Kristopher Allbright <Kallbright@troy.edu>

--- a/Feature Engineering/Off Average Dataset Calculation/Off Average.ipynb
+++ b/Feature Engineering/Off Average Dataset Calculation/Off Average.ipynb
@@ -306,20 +306,16 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "fceca15b-0372-4b05-ae72-43b6aadb2bd6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
     "nba.to_csv('off_avg.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2ee67b2-8101-4cd8-afea-82d3a8c65cdf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
